# edcmbone

./: .gitignore  AUDIT_REGRADE.md  CLAUDE.md  LAYER_MIGRATION_PLAN.md  LICENSE  README.md  closed_tokens.py  edcmbone_msdmd.ts  engine.py  frequency_probe.py  operational_widening_probe.py  phi_compose_probe.py  phi_compose_probe_v2.py  phi_compose_probe_v3.py  prime5_widening_probe.py  prime_carpet_probe.py  pytest.ini  ternary_widening_probe.py  ucns.py  version.py
.agents/skills/: README.md
.github/workflows/: ci.yml  manifest-check.yml
Backend/: LICENSE  pyproject.toml
Backend/src/edcmbone/: compress.py
Backend/src/edcmbone/metrics/: __init__.py  compute.py  matrix.py
Documentation/: GCIP.md  README.md  evidence_log.md  neurodivergence_handling.md  spec.md
Tests/: test_backend.py
aimmh-lib/: README.md
ammh/: README.md
backend/: README.md  pyproject.toml
backend/examples/: boundary_quickstart.py
backend/src/edcmbone/: compress.py
backend/src/edcmbone/canon/: loader.py
backend/src/edcmbone/canon/data/: bones_affixes_v1.json  bones_words_v1.json
backend/src/edcmbone/metrics/: __init__.py  compute.py  matrix.py  orthogonality.py  projection.py  risk.py  stats.py
backend/src/edcmbone/parser/: turns_rounds.py
backend/src/edcmbone/ucns/: closed_tokens.py
backend/src/edcmbone_backend/: __init__.py
backend/src/ucns/: __init__.py  ucns_v04.py
backend/tests/: test_backend_contracts.py
canon_eng/: GCIP.md  README.md  a0_architecture.md  actor_schema_v1.json  affixes_v1.json  behavioral_formulas_v1.md  behavioral_markers_v1.json  behavioral_schema_v1.json  bones_v1.json  bridge_schema_v1.json  canon_v2_proposal.md  dataflow.md  edcm.md  edcmbone_bundle_manifest_v1.json  evidence_log.md  function.md  neurodivergence_handling.md  operator_schema_v1.json  parser.md  pcna.md  pcna_topology_v1.md  pcta.md  round_schema_v1.json  spec.md  spec_hard_freeze_appendix_v1.md  turn_schema_v1.json  windowing_policy.md
canon_eng/release/: v1.0.0_freeze_statement.md  v1.0.0_release_notes.md
core/behavioral/: __init__.py  behavioral_metrics.py  behavioral_window.py  marker_matcher.py  structural_proxies.py  ucns_marker_store.py
core/bridge/: __init__.py  bridge_engine.py  math_utils.py
core/operator/: __init__.py  inventories.py  matcher.py  operator_extractor.py
core/parsing/: __init__.py  normalizer.py  parsing_pipeline.py  round_builder.py  (+2 more)
docs/: STATUS_phi_probes.md  eng_ucns_spec.md  outreach-collaboration.md  ucns-boundary.md  ucns_operational_widening.md
edcmbone/: __init__.py
frontend/: package.json
tests/: conftest.py  run_all.py  test_affix_residual_validation.py  test_apostrophe_normalization_and_tokenization.py  test_closed_tokens.py  test_metric_orthogonality_v02.py  test_metrics_layer_designation.py  test_package_version_and_operator_exports.py  test_polarity_balance.py  test_smoke.py  test_ucns_g_schema.py  test_ucns_objects.py
(+53 files in other folders)
