[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edcmbone-backend"
version = "0.2.0"
description = "MSDMD-compliant UCNS-only backend for EDCM boundary objects"
readme = "README.md"
license = { text = "MPL-2.0" }
requires-python = ">=3.8"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/edcmbone_backend", "src/ucns"]

[tool.pytest.ini_options]
testpaths = ["tests"]
